Handle text in quotes in extra comments in lupdate

Allows to have text in extra comment within quotes that will be kept
intact when running lupdate.

Fixes: QTBUG-110630
Co-authored-by: Kai Köhne <kai.koehne@qt.io>
Change-Id: I267e779193f168a8af067b927735991f2c512145
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>